# openclaude-mcp

./: .gitignore  .mcpbignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  INSTALL.md  README.md  TODO.md  docker-compose.yml  glama.json  justfile  llms-full.txt  llms.txt  manifest.json  push-to-github.bat  pyproject.toml  pytest.ini  run-tests.bat  run-tests.ps1  server.py  setup.ps1  smoke_test_log.txt  smoke_test_session.py  start.ps1
.github/workflows/: ci.yml  security.yml
assets/prompts/: examples.json  system.md  user.md
docs/: 01_THE_LEAK.md  02_KAIROS_AND_MEMORY.md  03_SURPRISES_AND_SECRETS.md  04_ULTRAPLAN.md  05_HARDENING.md  06_SECURITY_ADVISORY_AXIOS.md  07_MJS_STANDARD.md  MEMORY.md  PROMPT_SYSTEM.md  architecture.md
openclaude/: __init__.py  kairos.py  logging_util.py  model_router.py  session.py  session_persistence.py
scripts/: backup-repo.ps1  pre-push
tests/: conftest.py
tests/e2e/: test_full_session.py  test_ultraplan.py
tests/integration/: test_rest_bridge.py
tests/smoke/: test_startup.py
tests/unit/: test_kairos.py  test_model_router.py  test_safety.py  test_session.py  test_session_env.py
webapp/: build_log.txt  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
webapp/src/: App.tsx  api.ts  index.css  store.ts
webapp/src/components/Chat/: ChatWindow.tsx  XTermWindow.tsx
webapp/src/pages/: Dashboard.tsx  Examples.tsx  HelpPage.tsx  Kairos.tsx  LoggerPage.tsx  Models.tsx  Sessions.tsx  SettingsPage.tsx
