[project]
name = "openclaude-mcp"
version = "0.1.0"
description = "MCP control plane for OpenClaude — run Claude Code harness against local Ollama models. Zero cloud token cost. KAIROS autoDream. ULTRAPLAN relay."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Sandra Schi", email = "sandraschi@github"}]

dependencies = [
    "fastmcp>=3.2.0",
    "httpx>=0.27.0",
    "starlette>=1.0.0",
    "uvicorn[standard]>=0.30.0",
    "anyio>=4.4.0",
    "psutil>=6.0.0",
    "filelock>=3.13.0",   # MEMORY.md race condition fix (TODO.md fix 2a)
]

[project.optional-dependencies]
apps = [
    "fastmcp[apps]>=3.2.0",   # pulls prefab-ui for rich Prefab UI rendering
]
dev = [
    "ruff>=0.4.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-anyio>=0.0.0",
    "httpx>=0.27.0",
    "respx>=0.21.0",
    "bandit>=1.7.0",
    "semgrep>=1.68.0",
    "safety>=3.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["openclaude"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "S"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
