[project]
name = "openclaude-mcp"
version = "0.1.0"
description = "MCP control plane for OpenClaude — run Claude Code harness against local Ollama models. Zero cloud token cost. KAIROS autoDream. ULTRAPLAN relay."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Sandra Schi", email = "sandraschi@github"}]

dependencies = [
    "fastmcp>=3.2.0",
    "httpx>=0.27.0",
    "starlette>=1.0.0",
    "uvicorn[standard]>=0.30.0",
    "anyio>=4.4.0",
    "psutil>=6.0.0",
    "filelock>=3.13.0",   # MEMORY.md race condition fix (TODO.md fix 2a)
]

[project.optional-dependencies]
apps = [
    "fastmcp[apps]>=3.2.0",   # pulls prefab-ui for rich Prefab UI rendering
]
dev = [
    "ruff>=0.4.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-anyio>=0.0.0",
    "httpx>=0.27.0",
    "respx>=0.21.0",
    "bandit>=1.7.0",
    "semgrep>=1.68.0",
    "safety>=3.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["openclaude"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
# Hardened v13.1 Rule Set
select = [
    "E", "F", "I", "UP", "B", "S", "A", "ANN", "COM", "C4", "DTZ", "PIE", "T20", "PYI", "Q", "RSE", "RET", "SLF", "SIM", "TID", "ARG", "PTH", "ERA", "PD", "PGH", "PL", "TRY", "FLY", "PERF", "FURB", "LOG", "RUF"
]
ignore = [
    "ANN101", # Missing type annotation for self
    "ANN102", # Missing type annotation for cls
    "COM812", # Trailing comma missing (handled by formatter)
    "ISC001", # Single line implicit string concatenation (handled by formatter)
    "PLR0913", # Too many arguments
    "S101",   # Use of assert (standard for pytest)
    "TRY003", # Avoid specifying long messages in exceptions
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "ANN", "PLR", "TRY", "S105", "S106", "SLF001", "ARG002", "PLC0415"]
"server.py" = ["T20", "ARG001", "ARG002"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
